# blob_detector_cpp

./: CMakeLists.txt
src/: main.cpp
